--- a/components/Editor/WebView.html
+++ b/components/Editor/WebView.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <!-- Include stylesheet -->
-    <link href="//cdn.quilljs.com/1.3.6/quill.core.css" rel="stylesheet">
-    <script src="//cdn.quilljs.com/1.3.6/quill.core.js"></script>
+    <script src="//cdn.quilljs.com/1.3.6/quill.js"></script>
 
     <!-- Create the editor container -->
     <div id="editor">
