--- a/components/Editor/WebView.html
+++ b/components/Editor/WebView.html
@@ -1,26 +1,54 @@
 <head>
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <style>
-        body {
-            width : 100%;
-            height : 500px;
-        }
-    </style>
+    <link href="custom.css" rel="stylesheet">
+    <link href="https://cdn.quilljs.com/1.2.6/quill.snow.css" rel="stylesheet">
+    <script src="https://cdn.quilljs.com/1.2.6/quill.min.js"></script>
+
 </head>
 <body>
-    <!-- Include stylesheet -->
-    <script src="//cdn.quilljs.com/1.3.6/quill.js"></script>
-
-    <!-- Create the editor container -->
     <div id="editor">
-    <p>Hello World!</p>
-    <p>Some initial <strong>bold</strong> text</p>
-    <p><br></p>
+        <p>Hello World!</p>
+        <p>Some initial <strong>bold</strong> text</p>
+        <p><br></p>
     </div>
-    <!-- Initialize Quill editor -->
+    <div id="toolbar">
+        <!-- Add font size dropdown -->
+        <select class="ql-size">
+            <option value="small"></option>
+            <!-- Note a missing, thus falsy value, is used to reset to default -->
+            <option selected></option>
+            <option value="large"></option>
+            <option value="huge"></option>
+        </select>
+        <button class="ql-bold"></button>
+        <button class="ql-italic"></button>
+        <button class="ql-underline"></button>
+        <button class="ql-strike"></button>
+        <button class="ql-blockquote"></button>
+        <button class="ql-list" value="bullet"></button>
+        <button class="ql-list" value="ordered"></button>
+        <select class="ql-align">
+            <option selected></option>
+            <option value="center"></option>
+            <option value="right"></option>
+            <option value="justify"></option>
+        </select>
+        <button class="ql-link"></button>
+        <button class="ql-image"></button>
+        
+    
+    </div>
     <script>
-    var quill = new Quill('#editor', {
-        theme: 'snow'
-    });
+        var quill = new Quill('#editor', {
+            theme: 'snow',
+            modules: {
+                toolbar: '#toolbar'
+            }
+        });
+        window.onload = function () {
+            var height = document.getElementById('toolbar').offsetHeight;
+            document.getElementById('editor').style.paddingBottom = height+'px';
+            console.log(height)
+        };
     </script>
 </body>
